--- a/templates/base.html
+++ b/templates/base.html
@@ -74,27 +74,27 @@
 
 <body>
 
-<!-- ATTRACTIVE NAVBAR -->
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top shadow-sm py-3">
-  <div class="container">
-    <a class="navbar-brand fw-bold" href="/">Sanatan Seva Sangh</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+<!-- NAVBAR -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+        <a class="navbar-brand fw-bold" href="/">Sanatan Seva Sangh</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto align-items-center">
-        <li class="nav-item"><a class="nav-link active" href="/">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="/about/">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="/seva/">Seva</a></li>
-        <li class="nav-item"><a class="nav-link" href="/gallery/">Gallery</a></li>
-        <li class="nav-item"><a class="nav-link" href="/contact/">Contact</a></li>
-        <li class="nav-item">
-          <a class="btn btn-gradient ms-3" href="#donate">Donate</a>
-        </li>
-      </ul>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link active" href="/">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="/about/">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="/seva/">Seva</a></li>
+                <li class="nav-item"><a class="nav-link" href="/gallery/">Gallery</a></li>
+                <li class="nav-item"><a class="nav-link" href="/contact/">Contact</a></li>
+                <li class="nav-item">
+                    <a class="btn btn-warning ms-2" href="#donate">Donate</a>
+                </li>
+            </ul>
+        </div>
     </div>
-  </div>
 </nav>
 
 {% block content %}
