--- a/homepage/templates/about.html
+++ b/homepage/templates/about.html
@@ -36,7 +36,7 @@
 
 {% block content  %}
 <!-- HERO/BANNER -->
-<section class="hero-about">
+<section class="hero-about mt-4">
     <div class="hero-overlay"></div>
     <div class="hero-content">
         <h1 class="display-5 fw-bold">About Sanatan Seva Sangh</h1>
