--- a/homepage/templates/contact.html
+++ b/homepage/templates/contact.html
@@ -88,7 +88,7 @@
 
 {% block content  %}
 <!-- CONTACT SECTION -->
-<section id="contact" class="contact-section mt-5 py-5 bg-light">
+<section id="contact" class="contact-section py-5 bg-light">
     <div class="container">
 
         <!-- Section Title -->
