--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -31,7 +31,7 @@
 
 {% block content  %}
 <!-- HERO SECTION -->
-<section class="hero">
+<section class="hero mt-4">
     <div class="hero-overlay"></div>
     <div class="container hero-content text-center">
         <h1 class="display-4 fw-bold">Serving Sanatan Dharma with Devotion</h1>
