--- a/homepage/templates/gallery.html
+++ b/homepage/templates/gallery.html
@@ -41,7 +41,7 @@
 
 {% block content  %}
 <!-- HERO -->
-<section class="hero-gallery mb-5">
+<section class="hero-gallery mt-4 mb-5">
     <div class="hero-overlay"></div>
     <div class="hero-content">
         <h1 class="display-5 fw-bold">Photo Gallery</h1>
