--- a/homepage/templates/sewa.html
+++ b/homepage/templates/sewa.html
@@ -45,7 +45,7 @@
 
 {% block content  %}
 <!-- HERO SECTION -->
-<section class="hero-seva mb-5">
+<section class="hero-seva mt-4 mb-5">
     <div class="hero-overlay"></div>
     <div class="hero-content">
         <h1 class="display-5 fw-bold">Our Seva Activities</h1>
