--- a/templates/base.html
+++ b/templates/base.html
@@ -77,7 +77,7 @@
 <!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-        <a class="navbar-brand fw-bold" href="/">Sanatan Seva Sangh</a>
+        <a class="navbar-brand fw-bold" href="/">अखिल भारतीय सनातन सेवा संघ</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
