--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -4,7 +4,7 @@
 {% block css %}
 <style>
     .hero {
-        background: url('https://images.unsplash.com/photo-1524492412937-b28074a5d7da') center/cover no-repeat;
+        background: url('static/home_banner/homebanner.jpeg') center/cover no-repeat;
         height: 90vh;
         position: relative;
     }
