--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -26,6 +26,30 @@
         text-align: center;
         margin-bottom: 30px;
     }
+
+    @media (max-width: 768px) {
+        .hero {
+            height: 250px;
+            background-position: center;
+            background-size: cover;
+            width: 100%;
+        }
+    }
+
+    @media (max-width: 768px) {
+    .hero-content {
+        padding-top: 40%;   /* reduce top padding */
+        text-align: center; /* center text */
+    }
+    .hero-content h1 {
+        font-size: 1.5rem;  /* smaller title */
+    }
+    .hero-content p {
+        font-size: 1rem;    /* smaller subtitle */
+    }
+}
+
+
 </style>
 
 <style>
