--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -37,19 +37,21 @@
     }
 
     @media (max-width: 768px) {
-    .hero-content {
-        padding-top: 40%;   /* reduce top padding */
-        text-align: center; /* center text */
+        .hero-content {
+            padding-top: 40%;   /* reduce top padding */
+            text-align: center; /* center text */
+        }
+        .hero-content h1 {
+            font-size: 1.5rem;  /* smaller title */
+        }
+        .hero-content p {
+            font-size: 1rem;    /* smaller subtitle */
+        }
+        .hero-content .btn {
+            font-size: 0.9rem;   /* smaller text */
+            padding: 0.4rem 0.8rem; /* smaller button size */
+        }
     }
-    .hero-content h1 {
-        font-size: 1.5rem;  /* smaller title */
-    }
-    .hero-content p {
-        font-size: 1rem;    /* smaller subtitle */
-    }
-}
-
-
 </style>
 
 <style>
