--- a/homepage/templates/gallery.html
+++ b/homepage/templates/gallery.html
@@ -21,7 +21,7 @@
         }
 
         .hero-gallery {
-            background: url('https://images.unsplash.com/photo-1504198453319-5ce911bafcde') center/cover no-repeat;
+            background: url('static/home_banner/homebanner.jpeg') center/cover no-repeat;
             height: 40vh;
             position: relative;
         }
