--- a/homepage/templates/about.html
+++ b/homepage/templates/about.html
@@ -15,7 +15,7 @@
         border-radius: 10px;
     }
     .hero-about {
-        background: url('https://images.unsplash.com/photo-1524492412937-b28074a5d7da') center/cover no-repeat;
+        background: url('static/home_banner/homebanner.jpeg') center/cover no-repeat;
         height: 50vh;
         position: relative;
     }
