--- a/homepage/templates/sewa.html
+++ b/homepage/templates/sewa.html
@@ -10,7 +10,7 @@
     }
 
     .hero-seva {
-        background: url('https://images.unsplash.com/photo-1524492412937-b28074a5d7da') center/cover no-repeat;
+        background: url('static/home_banner/homebanner.jpeg') center/cover no-repeat;
         height: 45vh;
         position: relative;
     }
