--- a/homepage/templates/gallery.html
+++ b/homepage/templates/gallery.html
@@ -64,7 +64,7 @@
     </div>
 
     <!-- GALLERY GRID -->
-    <div class="row g-4">
+    <div class="row g-4 mb-3">
         {% for i in gallery %}
         <div class="col-md-4 gallery-item temple">
             <img src="{{i.image.url}}" class="gallery-img" alt="">
