--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -160,8 +160,8 @@
                 <div class="card shadow-sm equal-card">
                     <img src="{{ i.image.url }}" class="card-img-top fixed-img" alt="">
                     <div class="card-body">
-                        <h5 class="card-title title-fixed">{{ i.name }}</h5>
-                        <p class="desc-fixed">{{ i.designation | safe }}</p>
+                        <h5 class="card-title title-fixed">{{ i.description }}</h5>
+                        <p class="desc-fixed">{{ i.name | safe }}</p>
                     </div>
                 </div>
             </div>
