--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -194,13 +194,13 @@
         <div class="row">
             <div class="col-md-6">
                 <h5>Address:</h5>
-                <p>Sanatan Seva Sangh Ashram, Vrindavan, Mathura, Uttar Pradesh</p>
+                <p>P-3/ दीनदयाल पुरम,बरेली - 243122 ( उत्तर प्रदेश)</p>
 
                 <h5>Email:</h5>
-                <p>info@sanatanseva.org</p>
+                <p>sanghsanatanseva@gmail.com</p>
 
-<!--                <h5>Phone:</h5>-->
-<!--                <p>+91 98765 43210</p>-->
+                <!--                <h5>Phone:</h5>-->
+                <!--                <p>+91 98765 43210</p>-->
             </div>
 
             <div class="col-md-6">
