--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -163,7 +163,7 @@
         <div class="row g-4">
             {% for i in member %}
             <div class="col-md-4">
-                <div class="card shadow-sm equal-card">
+                <div class="card shadow-sm equal-card text-center">
                     <img src="{{ i.image.url }}" class="card-img-top member-fixed-img" alt="">
                     <div class="card-body">
                         <h5 class="card-title title-fixed">{{ i.description }}</h5>
