--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -167,7 +167,7 @@
                     <img src="{{ i.image.url }}" class="card-img-top member-fixed-img" alt="">
                     <div class="card-body">
                         <h5 class="card-title title-fixed">{{ i.description }}</h5>
-                        <p class="desc-fixed">{{ i.name | safe }}</p>
+                        <p class="">{{ i.name | safe }}</p>
                     </div>
                 </div>
             </div>
