--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -209,14 +209,14 @@
                 <!--                <p>+91 98765 43210</p>-->
             </div>
 
-            <div class="col-md-6">
-                <form>
-                    <input type="text" class="form-control mb-2" placeholder="Name">
-                    <input type="email" class="form-control mb-2" placeholder="Email">
-                    <textarea class="form-control mb-2" rows="4" placeholder="Message"></textarea>
-                    <button class="btn btn-warning w-100">Send Message</button>
-                </form>
-            </div>
+<!--            <div class="col-md-6">-->
+<!--                <form>-->
+<!--                    <input type="text" class="form-control mb-2" placeholder="Name">-->
+<!--                    <input type="email" class="form-control mb-2" placeholder="Email">-->
+<!--                    <textarea class="form-control mb-2" rows="4" placeholder="Message"></textarea>-->
+<!--                    <button class="btn btn-warning w-100">Send Message</button>-->
+<!--                </form>-->
+<!--            </div>-->
         </div>
     </div>
 </section>
