--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -158,7 +158,7 @@
 <!-- SEVA ACTIVITIES -->
 <section id="seva" class="py-5 bg-light">
     <div class="container">
-        <h2 class="section-title">Our Member</h2>
+        <h2 class="section-title">हमारे संरक्षक एवं राष्ट्रीय पदाधिकारी</h2>
 
         <div class="row g-4">
             {% for i in member %}
