--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -167,7 +167,8 @@
                     <img src="{{ i.image.url }}" class="card-img-top member-fixed-img" alt="">
                     <div class="card-body">
                         <h5 class="card-title title-fixed">{{ i.description }}</h5>
-                        <p class="">{{ i.name | safe }}</p>
+                        <h5 class="card-title title-fixed">{{ i.name }}</h5>
+<!--                        <p class="">{{ i.name | safe }}</p>-->
                     </div>
                 </div>
             </div>
