--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -168,7 +168,7 @@
                     <div class="card-body">
                         <h5 class="card-title title-fixed">{{ i.description }}</h5>
                         <h5 class="card-title title-fixed">{{ i.name }}</h5>
-<!--                        <p class="">{{ i.name | safe }}</p>-->
+                        <!--                        <p class="">{{ i.name | safe }}</p>-->
                     </div>
                 </div>
             </div>
@@ -177,6 +177,22 @@
 
     </div>
 </section>
+
+<!-- GALLERY -->
+<section id="video" class="py-5">
+    <div class="container">
+        <p class="section-title">अखिल भारतीय सनातन सेवा संघ के संरक्षक मंडल की बैठक की झलकियां जो दिनांक 17 नवंबर 2025
+            दिन सोमवार को प्रातः 11:00 से रूकमणि विहार, वृंदावन मैं संपन्न हुई।</p>
+<!--        <div class="row g-3">-->
+<!--            {% for i in gallery %}-->
+<!--            <div class="col-md-3">-->
+<!--                <img src="{{i.image.url}}" class="gallery-img">-->
+<!--            </div>-->
+<!--            {% endfor %}-->
+<!--        </div>-->
+    </div>
+</section>
+
 
 <!-- GALLERY -->
 <section id="gallery" class="py-5">
@@ -210,14 +226,14 @@
                 <!--                <p>+91 98765 43210</p>-->
             </div>
 
-<!--            <div class="col-md-6">-->
-<!--                <form>-->
-<!--                    <input type="text" class="form-control mb-2" placeholder="Name">-->
-<!--                    <input type="email" class="form-control mb-2" placeholder="Email">-->
-<!--                    <textarea class="form-control mb-2" rows="4" placeholder="Message"></textarea>-->
-<!--                    <button class="btn btn-warning w-100">Send Message</button>-->
-<!--                </form>-->
-<!--            </div>-->
+            <!--            <div class="col-md-6">-->
+            <!--                <form>-->
+            <!--                    <input type="text" class="form-control mb-2" placeholder="Name">-->
+            <!--                    <input type="email" class="form-control mb-2" placeholder="Email">-->
+            <!--                    <textarea class="form-control mb-2" rows="4" placeholder="Message"></textarea>-->
+            <!--                    <button class="btn btn-warning w-100">Send Message</button>-->
+            <!--                </form>-->
+            <!--            </div>-->
         </div>
     </div>
 </section>
