--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -181,17 +181,55 @@
 <!-- GALLERY -->
 <section id="video" class="py-5">
     <div class="container">
-        <p class="section-title">अखिल भारतीय सनातन सेवा संघ के संरक्षक मंडल की बैठक की झलकियां जो दिनांक 17 नवंबर 2025
-            दिन सोमवार को प्रातः 11:00 से रूकमणि विहार, वृंदावन मैं संपन्न हुई।</p>
-<!--        <div class="row g-3">-->
-<!--            {% for i in gallery %}-->
-<!--            <div class="col-md-3">-->
-<!--                <img src="{{i.image.url}}" class="gallery-img">-->
-<!--            </div>-->
-<!--            {% endfor %}-->
-<!--        </div>-->
+        <p class="section-title">
+            अखिल भारतीय सनातन सेवा संघ के संरक्षक मंडल की बैठक की झलकियां जो दिनांक 17 नवंबर 2025
+            दिन सोमवार को प्रातः 11:00 से रूकमणि विहार, वृंदावन मैं संपन्न हुई।
+        </p>
+
+        <div class="row g-3">
+
+            <!-- 6 Video Boxes -->
+            <!-- Replace VIDEO_ID_X with your YouTube video IDs -->
+            <div class="col-md-4 col-sm-6">
+                <div class="ratio ratio-16x9">
+                    <iframe src="https://www.youtube.com/embed/VIDEO_ID_1" allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-md-4 col-sm-6">
+                <div class="ratio ratio-16x9">
+                    <iframe src="https://www.youtube.com/embed/VIDEO_ID_2" allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-md-4 col-sm-6">
+                <div class="ratio ratio-16x9">
+                    <iframe src="https://www.youtube.com/embed/VIDEO_ID_3" allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-md-4 col-sm-6">
+                <div class="ratio ratio-16x9">
+                    <iframe src="https://www.youtube.com/embed/VIDEO_ID_4" allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-md-4 col-sm-6">
+                <div class="ratio ratio-16x9">
+                    <iframe src="https://www.youtube.com/embed/VIDEO_ID_5" allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-md-4 col-sm-6">
+                <div class="ratio ratio-16x9">
+                    <iframe src="https://www.youtube.com/embed/VIDEO_ID_6" allowfullscreen></iframe>
+                </div>
+            </div>
+
+        </div>
     </div>
 </section>
+
 
 
 <!-- GALLERY -->
