--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -192,37 +192,7 @@
             <!-- Replace VIDEO_ID_X with your YouTube video IDs -->
             <div class="col-md-4 col-sm-6">
                 <div class="ratio ratio-16x9">
-                    <iframe src="https://www.youtube.com/embed/VIDEO_ID_1" allowfullscreen></iframe>
-                </div>
-            </div>
-
-            <div class="col-md-4 col-sm-6">
-                <div class="ratio ratio-16x9">
-                    <iframe src="https://www.youtube.com/embed/VIDEO_ID_2" allowfullscreen></iframe>
-                </div>
-            </div>
-
-            <div class="col-md-4 col-sm-6">
-                <div class="ratio ratio-16x9">
-                    <iframe src="https://www.youtube.com/embed/VIDEO_ID_3" allowfullscreen></iframe>
-                </div>
-            </div>
-
-            <div class="col-md-4 col-sm-6">
-                <div class="ratio ratio-16x9">
-                    <iframe src="https://www.youtube.com/embed/VIDEO_ID_4" allowfullscreen></iframe>
-                </div>
-            </div>
-
-            <div class="col-md-4 col-sm-6">
-                <div class="ratio ratio-16x9">
-                    <iframe src="https://www.youtube.com/embed/VIDEO_ID_5" allowfullscreen></iframe>
-                </div>
-            </div>
-
-            <div class="col-md-4 col-sm-6">
-                <div class="ratio ratio-16x9">
-                    <iframe src="https://www.youtube.com/embed/VIDEO_ID_6" allowfullscreen></iframe>
+                    <iframe src="https://youtu.be/wsIt3R9JMfs?si=ZsacBVZ4aFxQlkz-" allowfullscreen></iframe>
                 </div>
             </div>
 
