--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -192,7 +192,7 @@
             <!-- Replace VIDEO_ID_X with your YouTube video IDs -->
             <div class="col-md-4 col-sm-6">
                 <div class="ratio ratio-16x9">
-                    <iframe src="https://youtu.be/wsIt3R9JMfs?si=ZsacBVZ4aFxQlkz-" allowfullscreen></iframe>
+                    <iframe src="https://youtu.be/wsIt3R9JMfs?si=1DF-I_z2CZC1jTxu" allowfullscreen></iframe>
                 </div>
             </div>
 
