--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -188,46 +188,54 @@
 
         <div class="row g-3">
 
-            <!-- 6 Video Boxes -->
-            <!-- Replace VIDEO_ID_X with your YouTube video IDs -->
             <div class="col-md-4 col-sm-6">
                 <div class="ratio ratio-16x9">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/wsIt3R9JMfs?si=1DF-I_z2CZC1jTxu"
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/wsIt3R9JMfs?si=YY8g--JHMteeffFp"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
+            </div>
 
+            <div class="col-md-4 col-sm-6">
                 <div class="ratio ratio-16x9">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Cjq3uUAg3zg?si=_j-vQi7cbJ1wyqdd"
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Cjq3uUAg3zg?si=M3PaNprt7gLuCZ1b"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
+            </div>
 
+            <div class="col-md-4 col-sm-6">
                 <div class="ratio ratio-16x9">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/XJFd8GAtzto?si=JHUsFGFO8pG3-Iam"
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/XJFd8GAtzto?si=UmgJbQUsMo4_vYhS"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
+            </div>
 
+            <div class="col-md-4 col-sm-6">
                 <div class="ratio ratio-16x9">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/qJjCh2qXbvw?si=QD3Zwas_9FebvkGU"
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/qJjCh2qXbvw?si=xXG8Uw-tC_hZ_ZuA"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
+            </div>
 
+            <div class="col-md-4 col-sm-6">
                 <div class="ratio ratio-16x9">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/qJjCh2qXbvw?si=QD3Zwas_9FebvkGU"
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/mDhDBjvv1JE?si=KscOPqzglxeWy0BZ"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
+            </div>
 
+            <div class="col-md-4 col-sm-6">
                 <div class="ratio ratio-16x9">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/IrFYG4joxaY?si=ziAo60ZL9bJlnFih"
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/IrFYG4joxaY?si=byodbYTyAZ_9yNm0"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -235,6 +243,8 @@
             </div>
 
         </div>
+
+
     </div>
 </section>
 
